Fix issue with sticky-board-wrapper not stacking on z-index. Fix issue with .tool-button pseudo-elements displaying when not hovered on.

--- a/main/main-site/main.css
+++ b/main/main-site/main.css
@@ -32,7 +32,6 @@ body {
     gap: 5px;
     font-size: 24px;
     white-space: nowrap;
-    z-index: 10;
 }
 
 .header > .link {
@@ -93,6 +92,7 @@ body {
     transform: translateY(-10px);
     pointer-events: none;
     transition: opacity 250ms ease-in-out, transform 250ms ease-in-out;
+    background-color: #fcdce9;
 }
 
 
