--- a/main/main-site/popup.css
+++ b/main/main-site/popup.css
@@ -3,14 +3,14 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(0);
-    transition: 1s ease-in-out;
+    transition: .25s ease-in-out;
     border: 10px double #fff8fb;
     border-radius: 1em;
     padding: 0 1em;
     background-color: #fcdce9;
     width: 600px;
     max-width: 80%;
-    z-index: 10;
+    z-index: 3;
 }
 
 .popup.active {
@@ -75,6 +75,7 @@
     bottom: 0;
     background-color: rgba(0, 0, 0, .5);
     pointer-events: none;
+    z-index: 2;
 }
 
 #overlay.active {
